# nfido

./: .gitignore  Cargo.toml  README.md  all-schemes.sql  config.dist.toml  nfido.service
XMB-1.9.12.03/documentation/: readme.txt
XMB-1.9.12.03/files/: buddy.php  config.php  cp.php  cp2.php  css.php  editprofile.php  faq.php  files.php  forumdisplay.php  header.php  index.php  lost.php  member.php  memcp.php  misc.php  post.php  quarantine.php  robots.txt  search.php  stats.php  templates.xmb  today.php  tools.php  topicadmin.php  trust.pem  u2u.php  viewthread.php  vtmisc.php
XMB-1.9.12.03/files/db/: mysqli.php
XMB-1.9.12.03/files/include/: admin.inc.php  attach.inc.php  buddy.inc.php  captcha.inc.php  debug.inc.php  functions.inc.php  global.inc.php  online.inc.php  schema.inc.php  sessions.inc.php  smtp.inc.php  spelling.inc.php  sql.inc.php  tokens.inc.php  translation.inc.php  u2u.inc.php  validate-email.inc.php  validate.inc.php
XMB-1.9.12.03/files/install/: cinst.php  index.php
XMB-1.9.12.03/files/js/: bbcodefns-ie.js  header.js  (+2 more)
XMB-1.9.12.03/upgrade/: index.php  login.php  readme.txt  shell.php  status.php  trigger.php  upgrade.lib.php
public/css/: default.css
src/: main.rs
src/modules/: global_const.rs  mod.rs
templates/: base.html  error.html  forumdisplay.html  index.html  index.old.html  post.html  post_new.html  viewthread.html
templates/account/: login.html  login_email_verify.html  login_success.html  reg.html  reg_result.html
templates/admin/: forum_category.html  index.html
tests/: email_test.rs  password_test.rs  rand_test.rs
(+39 files in other folders)
