[package]
name = "nfido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.14"
tera = "1.15.0"
env_logger = "0.9.0"
actix-web = "4.0.1"
actix-http = "3.0.4"
actix-files = "0.6.0"
config = "0.12"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
#log lib
fast_log = "1.5"
#async runtime lib
tokio = { version = "1.12", features = ["full"] }
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
#rbatis lib(debug_mode will print json data)
rbson = { version = "2.0.3", features = ["uuid-0_8", "chrono-0_4"] }
rbatis = { version = "3", features= ["debug_mode"]}
reqwest = "0.11"